--- a/_site.yml
+++ b/_site.yml
@@ -7,90 +7,101 @@ navbar:
     - text: "W1"
       menu:
         - text: "Intro to R"
-          href: 01-A-topic-name.html
+          href: 01-A-R-intro.html
         - text: "R markdown"
-          href: 01-B-topic-name.html
+          href: 01-B-Rmarkdown-intro.html
         - text: "ggplot2"
-          href: 01-C-topic-name.html
+          href: 01-C-ggplot2-intro.html
     - text: "W2"
       menu:
+        - text: "R workshop"
+          href: 02-A-R-workshop.html
         - text: "Intro to git"
-          href: 02-A-topic-name.html
-        - text: "More R"
-          href: 02-B-topic-name.html
+          href: 02-B-git-intro.html
     - text: "W3"
       menu:
-        - text: "Topic 1"
-          href: 02-A-topic-name.html
-        - text: "Topic 2"
-          href: 02-B-topic-name.html
-        - text: "Topic 3"
-          href: 02-C-topic-name.html    
+        - text: "Data exploration"
+          href: 03-A-data-exploration.html
+        - text: "Linear models"
+          href: 03-B-topic-name.html
+        - text: "Heterogeneity"
+          href: 03-C-topic-name.html    
     - text: "W4"
       menu:
-        - text: "Topic 4"
-          href: 02-A-topic-name.html
-        - text: "Topic 5"
-          href: 02-B-topic-name.html
-        - text: "Topic 6"
-          href: 02-C-topic-name.html
+        - text: "Mixed effects models"
+          href: 04-A-topic-name.html
+        - text: "Binary & proportional data"
+          href: 04-B-topic-name.html
+        - text: "Zero-inflated data"
+          href: 04-C-topic-name.html
     - text: "W5"
       menu:
-        - text: "Topic 7"
-          href: 02-A-topic-name.html
-        - text: "Topic 8"
-          href: 02-B-topic-name.html
-        - text: "Topic 9"
-          href: 02-C-topic-name.html
-    - text: "W5"
-      menu:
-        - text: "Topic 10"
-          href: 02-A-topic-name.html
-        - text: "Topic 11"
-          href: 02-B-topic-name.html
-        - text: "Topic 12"
-          href: 02-C-topic-name.html
-    - text: "W5"
-      menu:
-        - text: "Topic 13"
-          href: 02-A-topic-name.html
-        - text: "Topic 14"
-          href: 02-B-topic-name.html
-        - text: "Topic 15"
-          href: 02-C-topic-name.html
+        - text: "Bayesian linear models"
+          href: 05-A-topic-name.html
+        - text: "Bayesian hierarchical models"
+          href: 05-B-topic-name.html
+        - text: "Bayesian non-linear models"
+          href: 05-C-topic-name.html
     - text: "W6"
       menu:
-        - text: "Topic 16"
-          href: 02-A-topic-name.html
-        - text: "Topic 17"
-          href: 02-B-topic-name.html
-        - text: "Topic 18"
-          href: 02-C-topic-name.html
+        - text: "Unconstrained ordination"
+          href: 06-A-topic-name.html
+        - text: "Constrained ordination"
+          href: 06-B-topic-name.html
+        - text: "Comparing multivariate data"
+          href: 06-C-topic-name.html
     - text: "W7"
       menu:
-        - text: "Topic 19"
-          href: 02-A-topic-name.html
-        - text: "Topic 20"
-          href: 02-B-topic-name.html
-        - text: "Topic 21"
-          href: 02-C-topic-name.html
+        - text: "Student 1"
+          href: 07-midquarter-student-name1.html
+        - text: "Student 2"
+          href: 07-midquarter-student-name2.html
+        - text: "Student 3"
+          href: 07-midquarter-student-name3.html
+        - text: "Student 4"
+          href: 07-midquarter-student-name4.html
+        - text: "Student 5"
+          href: 07-midquarter-student-name5.html
+        - text: "Student 6"
+          href: 07-midquarter-student-name6.html
+        - text: "Student 7"
+          href: 07-midquarter-student-name7.html
+        - text: "Student 8"
+          href: 07-midquarter-student-name8.html
     - text: "W8"
       menu:
-        - text: "Topic 22"
-          href: 02-A-topic-name.html
-        - text: "Topic 23"
-          href: 02-B-topic-name.html
-        - text: "Topic 24"
-          href: 02-C-topic-name.html
+        - text: "Spatial analysis (Zuur)"
+          href: 08-A-topic-name.html
+        - text: "Spatial analysis (Borcard)"
+          href: 08-B-topic-name.html
+        - text: "Bayesian spatial analysis"
+          href: 08-C-topic-name.html
     - text: "W9"
       menu:
-        - text: "Topic 25"
-          href: 02-A-topic-name.html
-        - text: "Topic 26"
-          href: 02-B-topic-name.html
-        - text: "Topic 27"
-          href: 02-C-topic-name.html
-    
+        - text: "Topic 19"
+          href: 09-A-topic-name.html
+        - text: "Topic 20"
+          href: 09-B-topic-name.html
+        - text: "Topic 21"
+          href: 09-C-topic-name.html
+    - text: "W10"
+      menu:
+        - text: "Student 1"
+          href: 07-midquarter-student-name1.html
+        - text: "Student 2"
+          href: 07-midquarter-student-name2.html
+        - text: "Student 3"
+          href: 07-midquarter-student-name3.html
+        - text: "Student 4"
+          href: 07-midquarter-student-name4.html
+        - text: "Student 5"
+          href: 07-midquarter-student-name5.html
+        - text: "Student 6"
+          href: 07-midquarter-student-name6.html
+        - text: "Student 7"
+          href: 07-midquarter-student-name7.html
+        - text: "Student 8"
+          href: 07-midquarter-student-name8.html 
 output_dir: "."
 exclude: ["CONTRIBUT*.md","index.md","README.md","*.db"]
 include: ["*.Rmd","LICENSE.md"]
