--- a/_site.yml
+++ b/_site.yml
@@ -25,7 +25,7 @@ navbar:
         - text: "Linear models"
           href: 03-B-linear-models.html
         - text: "Heterogeneity"
-          href: 03-C-topic-name.html    
+          href: 03-C-heterogeneity.html    
     - text: "W4"
       menu:
         - text: "Mixed effects models"
